# untypeclass

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  untypeclass.cabal
src/: Category.hs  Function.hs  Functor.hs  Isomorphism.hs  NaturalTransformation.hs  Semigroupoid.hs
src/Category/: Monoidal.hs  Semigroupal.hs
src/Data/Categorical/: .Functor.hs.swp  Category.hs  Functor.hs  Semigroupoid.hs
src/Function/: Instance.hs  Is.hs
src/Function/Instance/: Category.hs
src/Function/Is/: Category.hs  Functor.hs
src/Function/Is/Functor/: Covariant.hs  Endofunctor.hs
src/Function/Is/Functor/Covariant/: Function.hs
src/Function/Is/Functor/Endofunctor/: Function.hs
src/Functor/: Adjoint.hs  Bifunctor.hs  Contravariant.hs  Covariant.hs  Endo.hs  Endofunctor.hs  Monoidal.hs  PFunctor.hs  QFunctor.hs
src/Functor/Covariant/: Function.hs
src/Functor/Endo/: Functor.hs
src/Functor/Endofunctor/: Function.hs
src/Functor/Endofunctor/Function/: Apply.hs
src/Functor/Monoidal/: Endo.hs
src/Functor/Monoidal/Endo/: Applicative.hs
src/High/: Bifunctor.hs  Category.hs  Functor.hs  FunctorCategory.hs  Isomorphism.hs  PFunctor.hs  QFunctor.hs  Semigroupoid.hs
src/High/Category/: Monoidal.hs  Semigroupal.hs
src/High/Category/Monoidal/: Monad.hs
src/High/Category/Monoidal/Monad/: Monad.hs
src/High/Functor/: Bifunctor.hs  PFunctor.hs  QFunctor.hs
