name:                untypeclass

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0

synopsis:            It's a package made for practice.
-- description:         

homepage:            https://github.com/Hexirp/untypeclass

license:             BSD3
license-file:        LICENSE

author:              Hexirp
maintainer:          https://github.com/Hexirp/untypeclass/issues
-- copyright:           

category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Category
    Function
    Function.Is
    Function.Is.Category
    Function.Is.Functor
    Function.Is.Functor.Endofunctor
    Function.Is.Functor.Endofunctor.Function
    Functor
    Functor.Contravariant
    Functor.Endofunctor
    Functor.Endofunctor.Function
    Functor.Endofunctor.Function.Apply
    Semigroupoid
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
