name:                untypeclass

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0

synopsis:            It's a package made for practice.
-- description:         

homepage:            https://github.com/Hexirp/untypeclass

license:             BSD3
license-file:        LICENSE

author:              Hexirp
maintainer:          https://github.com/Hexirp/untypeclass/issues
-- copyright:           

category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Category
    Category.Monoidal
    Category.Semigroupal
    Functor
    Functor.Adjoint
    Functor.Bifunctor
    Functor.Endo
    Functor.Endo.Functor
    Functor.Monoidal
    Functor.Monoidal.Endo
    Functor.Monoidal.Endo.Applicative
    Functor.PFunctor
    Functor.QFunctor
    High.Category
    High.Category.Monoidal
    High.Category.Monoidal.Monad
    High.Category.Semigroupal
    High.Functor
    High.Functor.Bifunctor
    High.Functor.PFunctor
    High.Functor.QFunctor
    High.FunctorCategory
    High.Isomorphism
    High.Semigroupoid
    Isomorphism
    NaturalTransformation
    Semigroupoid
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
